<resources>
    <!-- Toolbar menu (always shown) -->
    <string name="grid_on_off">Grid on/off</string>
    <string name="reset_view_port">Reset View Port</string>

    <!-- menu_popup_layer -->
    <string name="toggle_visibility">Toggle visibility</string>
    <string name="duplicate_layer">Duplicate</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="merge_down">Merge down</string>

    <!-- Layers menu -->
    <string name="layers">Layers</string>
    <string name="only_show_selected_layer">Only show selected layer</string>
    <string name="show_all_layers">Show all layers</string>
    <string name="hide_all_layers">Hide all layers</string>
    <string name="merge_all_layers">Merge all layers</string>

    <!-- Export menu -->
    <string name="export">Export</string>
    <string name="png">PNG</string>
    <string name="gif">GIF</string>
    <string name="sprite_atlas">Sprite Atlas</string>
    <string name="folder">Folder</string>

    <!-- Project menu -->
    <string name="project">Project</string>
    <string name="project_manager">Project Manager</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="new_new">New</string>

    <!-- Dialogs -->
    <string name="merge">Merge</string>
    <string name="merge_all_layers_warning">Merge all layers?</string>

    <string name="remove_layer">Remove layer</string>
    <string name="remove_layer_warning">Remove this layer?</string>

    <string name="clear_current_layer">Clear current layer</string>
    <string name="clear_current_layer_warning">Clear the current layer?</string>

    <string name="merge_down_layer">Merge down layer</string>
    <string name="merge_down_layer_warning">Merge down layer?</string>

    <string name="new_project">New Project</string>
    <string name="create">Create</string>

    <string name="save_project">Save project</string>
    <string name="name">Name</string>

    <string name="eraser_width" translatable="false">Eraser width</string>
    <string name="line_width" translatable="false">Line width</string>
    <string name="brush_width" translatable="false">Brush width</string>
    <string name="ok" translatable="false">Confirm</string>
    <string name="pencil_width" translatable="false">Pencil width</string>

    <!-- ProjectManagerActivity -->
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_project">Delete project</string>
    <string name="delete_project_warning">Delete this project?</string>
    <string name="project_deleted">Project deleted</string>
    <string name="no_project_found">No project found</string>

    <!-- About -->
    <string name="about">About</string>

    <!-- About activity -->
    <string name="app_creator">Created by BennyKok</string>
    <string name="get_more_apps"><u>Get more apps</u></string>
    <string name="find_on_github"><u>Find on GitHub</u></string>
    <string name="brought_to_you_by"><![CDATA[<b>Brought to you by these amazing open-source projects:</b>]]></string>
    <string name="opensource_libraries">Open-source libraries</string>
    <string name="opensource_contributors"><u>All Contributors</u></string>

    <!-- Toasts -->
    <string name="storage_permission_denied">Sorry, this application requires storage permission for saving your project.</string>
    <string name="file_name_cannot_be_empty">The file name cannot be empty!</string>
    <string name="frame_time_cannot_be_empty">Frame time cannot be empty!</string>
    <string name="export_successful">Exported successfully</string>
    <string name="no_more_redo">No more redo</string>
    <string name="no_more_undo">No more undo</string>

    <!-- Content descriptors -->
    <string name="fab_undo">Undo</string>
    <string name="fab_redo">Redo</string>
    <string name="fab_selected_color">Currently selected color</string>
    <string name="fab_eyedropper">Eyedropper</string>
    <string name="fab_tools">Tools</string>

    <!-- Errors -->
    <string name="error_something_went_wrong">Something went wrong!</string>
    <string name="error_loading_project">An error occurred while loading your project.</string>
    <string name="error_deleting_project">Unable to delete project!</string>

    <!-- Export dialog -->
    <string name="gifSpeed">Speed(ms): </string>
    <string name="exportSize">Size: </string>

    <string name="exportName">Name: </string>

    <!-- Project creation -->
    <string name="width">Width: </string>
    <string name="height">Height: </string>
    <string name="fab_shapes">Shapes</string>
    <string name="permission_explanation">The app needs permission to be able to save your projects</string>
</resources>
